tests/analysis/snapshots/r#mod__analysis__alpha034__variable_scope-5.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&118)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 112,
        end: 113,
        is_public: false,
    },
)
