tests/analysis/snapshots/r#mod__analysis__alpha034__variable_scope-7.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&220)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 208,
        end: 209,
        is_public: false,
    },
)
