tests/analysis/snapshots/r#mod__analysis__alpha034__variable_scope-8.snap
---
source: tests/analysis/alpha034.rs
expression: a_defs.get(&278)
---
Some(
    SymbolLocation {
        file: (
            FileId(
                0,
            ),
            FileVersion(
                1,
            ),
        ),
        start: 262,
        end: 263,
    },
)
